# esp32_secure_ota

./: .gitignore  CMakeLists.txt  README.md  flake.nix  sdkconfig.defaults
documentation/: documentation.bbl  documentation.bcf  documentation.blg  documentation.run.xml  documentation.tex  references.bib  slides.tex  title.tex
main/: CMakeLists.txt  Kconfig.projbuild  main.c  ota.c  ota.h  wifi.c  wifi.h
ota_https_server/: Cargo.toml
ota_https_server/src/: main.rs
server/: ca_cert.pem
