[package]
name = "ota_https_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
hyper-util = { version = "0.1.5", features = ["full"] }
tower = "0.4.13"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25.0"
rustls = "0.22.4"
rustls-pemfile = "2.1.0"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.86"
